5_35_LVGL_Full_Test-S024/build/log/idf_py_stdout_output_60284
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/dt/esp/5_35_LVGL_Full_Test-S024/build/bootloader/esp-idf/esptool_py && /home/dt/.espressif/python_env/idf5.4_py3.8_env/bin/python /home/dt/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/dt/esp/5_35_LVGL_Full_Test-S024/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/weatherReport.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/weatherReport.c.obj 
/home/dt/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-dev-826-g8760e6d2a7-dirty\" -DLV_CONF_INCLUDE_SIMPLE=1 -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/dt/esp/5_35_LVGL_Full_Test-S024/build/config -I/home/dt/esp/5_35_LVGL_Full_Test-S024/main -I/home/dt/esp/esp-idf/components/newlib/platform_include -I/home/dt/esp/esp-idf/components/freertos/config/include -I/home/dt/esp/esp-idf/components/freertos/config/include/freertos -I/home/dt/esp/esp-idf/components/freertos/config/xtensa/include -I/home/dt/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dt/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/dt/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/dt/esp/esp-idf/components/freertos/esp_additions/include -I/home/dt/esp/esp-idf/components/esp_hw_support/include -I/home/dt/esp/esp-idf/components/esp_hw_support/include/soc -I/home/dt/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/dt/esp/esp-idf/components/esp_hw_support/dma/include -I/home/dt/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/dt/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/dt/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/dt/esp/esp-idf/components/heap/include -I/home/dt/esp/esp-idf/components/log/include -I/home/dt/esp/esp-idf/components/soc/include -I/home/dt/esp/esp-idf/components/soc/esp32 -I/home/dt/esp/esp-idf/components/soc/esp32/include -I/home/dt/esp/esp-idf/components/hal/platform_port/include -I/home/dt/esp/esp-idf/components/hal/esp32/include -I/home/dt/esp/esp-idf/components/hal/include -I/home/dt/esp/esp-idf/components/esp_rom/include -I/home/dt/esp/esp-idf/components/esp_rom/include/esp32 -I/home/dt/esp/esp-idf/components/esp_rom/esp32 -I/home/dt/esp/esp-idf/components/esp_common/include -I/home/dt/esp/esp-idf/components/esp_system/include -I/home/dt/esp/esp-idf/components/esp_system/port/soc -I/home/dt/esp/esp-idf/components/esp_system/port/include/private -I/home/dt/esp/esp-idf/components/xtensa/esp32/include -I/home/dt/esp/esp-idf/components/xtensa/include -I/home/dt/esp/esp-idf/components/xtensa/deprecated_include -I/home/dt/esp/esp-idf/components/lwip/include -I/home/dt/esp/esp-idf/components/lwip/include/apps -I/home/dt/esp/esp-idf/components/lwip/include/apps/sntp -I/home/dt/esp/esp-idf/components/lwip/lwip/src/include -I/home/dt/esp/esp-idf/components/lwip/port/include -I/home/dt/esp/esp-idf/components/lwip/port/freertos/include -I/home/dt/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/dt/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/dt/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/dt/esp/5_35_LVGL_Full_Test-S024/components/lvgl_esp32_drivers -I/home/dt/esp/5_35_LVGL_Full_Test-S024/components/lvgl -I/home/dt/esp/5_35_LVGL_Full_Test-S024/components/lvgl/lvgl -I/home/dt/esp/esp-idf/components/esp_driver_spi/include -I/home/dt/esp/esp-idf/components/esp_pm/include -I/home/dt/esp/esp-idf/components/esp_driver_gpio/include -I/home/dt/esp/esp-idf/components/esp_event/include -I/home/dt/esp/esp-idf/components/esp_timer/include -I/home/dt/esp/5_35_LVGL_Full_Test-S024/components/lvgl_esp32_drivers/lvgl_touch -I/home/dt/esp/5_35_LVGL_Full_Test-S024/components/lvgl_esp32_drivers/lvgl_tft -I/home/dt/esp/5_35_LVGL_Full_Test-S024/components/lv_examples -I/home/dt/esp/esp-idf/components/esp_http_client/include -I/home/dt/esp/esp-idf/components/json/cJSON -I/home/dt/esp/esp-idf/components/esp_wifi/include -I/home/dt/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/dt/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/dt/esp/esp-idf/components/esp_wifi/include/local -I/home/dt/esp/esp-idf/components/esp_phy/include -I/home/dt/esp/esp-idf/components/esp_phy/esp32/include -I/home/dt/esp/esp-idf/components/esp_netif/include -I/home/dt/esp/esp-idf/components/nvs_flash/include -I/home/dt/esp/esp-idf/components/spi_flash/include -I/home/dt/esp/esp-idf/components/esp_partition/include -I/home/dt/esp/esp-idf/examples/common_components/protocol_examples_common/include -I/home/dt/esp/esp-idf/components/esp-tls -I/home/dt/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/dt/esp/esp-idf/components/mbedtls/port/include -I/home/dt/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/dt/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/dt/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/dt/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/dt/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/dt/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/dt/esp/esp-idf/components/esp_driver_gptimer/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/dt/esp/5_35_LVGL_Full_Test-S024=. -fmacro-prefix-map=/home/dt/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/weatherReport.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/weatherReport.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/weatherReport.c.obj -c /home/dt/esp/5_35_LVGL_Full_Test-S024/main/weatherReport.c
/home/dt/esp/5_35_LVGL_Full_Test-S024/main/weatherReport.c: In function 'http_client_task':
/home/dt/esp/5_35_LVGL_Full_Test-S024/main/weatherReport.c:101:9: error: multi-line comment [-Werror=comment]
  101 |         //static const char *URL = "http://"HOST"/v3/weather/daily.json?"       \
      |         ^
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
